<resources>
    <string name="app_name">warframe tool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SkevenXu</string>
    <string name="nav_header_subtitle">He is Author</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_button1">5</string>
    <string name="action_button2">10</string>
    <string name="action_button3">15</string>
    <string name="action_button4">20</string>
    <string name="action_button5">50</string>



    <string name="menu_home">首页</string>

    <string name="menu_gallery">平原赏金</string>
    <string name="menu_slideshow">虚空裂隙</string>
    <string name="menu_voidTrader">奸商导购</string>
    <string name="menu_sundry">杂项</string>
    <string name="menu_invasions">入侵</string>
    <string name="menu_construction">舰队建造</string>
    <string name="menu_rivensearch">紫卡查询</string>
    <string name="menu_itemsearch">wm交易查询</string>
    <string name="menu_ducats">杜卡德计算器</string>
    <string name="menu_updateinfo">更新公告</string>

</resources>