<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_voidtrader"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_voidTrader" />
        <item
            android:id="@+id/nav_sundry"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sundry" />
        <item
            android:id="@+id/nav_invasions"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_invasions" />
        <item
            android:id="@+id/nav_construction"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_construction" />
        <item
            android:id="@+id/nav_rivensearch"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_rivensearch" />
        <item
            android:id="@+id/nav_itemsearch"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_itemsearch" />
    </group>
</menu>