<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.warframedemo1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.warframedemo1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.warframedemo1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_voidtrader"
        android:name="com.example.warframedemo1.ui.voidtrader.VoidTraderFragment"
        android:label="@string/menu_voidTrader"
        tools:layout="@layout/fragment_voidtrader" />
    <fragment
        android:id="@+id/nav_sundry"
        android:name="com.example.warframedemo1.ui.sundry.SundryFragment"
        android:label="@string/menu_sundry"
        tools:layout="@layout/fragment_sundry" />
    <fragment
        android:id="@+id/nav_invasions"
        android:name="com.example.warframedemo1.ui.invasions.invasionsFragment"
        android:label="@string/menu_invasions"
        tools:layout="@layout/fragment_invasions"/>
    <fragment
        android:id="@+id/nav_construction"
        android:name="com.example.warframedemo1.ui.construction.ConstructionFragment"
        android:label="@string/menu_construction"
        tools:layout="@layout/fragment_contruction"/>
    <fragment
        android:id="@+id/nav_rivensearch"
        android:name="com.example.warframedemo1.ui.RivenSearch.RivenSearchFragment"
        android:label="@string/menu_rivensearch"
        tools:layout="@layout/fragment_rivensearch"/>
    <fragment
        android:id="@+id/nav_itemsearch"
        android:name="com.example.warframedemo1.ui.ItemSearch.ItemSearchFragment"
        android:label="@string/menu_itemsearch"
        tools:layout="@layout/fragment_itemsearch"/>
    <fragment
        android:id="@+id/nav_ducats"
        android:name="com.example.warframedemo1.ui.ducats.DucatsFragment"
        android:label="@string/menu_ducats"
        tools:layout="@layout/fragment_ducats"/>
</navigation>