<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_button1"
        android:orderInCategory="100"
        android:title="@string/action_button1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_button2"
        android:orderInCategory="100"
        android:title="@string/action_button2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_button3"
        android:orderInCategory="100"
        android:title="@string/action_button3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_button4"
        android:orderInCategory="100"
        android:title="@string/action_button4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_button5"
        android:orderInCategory="100"
        android:title="@string/action_button5"
        app:showAsAction="never" />
</menu>